HDS-3373 Fixed layout issues with fixed app-header overlapping main content, cleaned up css tokens, fixed issue with dark theming for interactive components using old class name

--- a/packages/components/src/styles/components/side-nav/header.scss
+++ b/packages/components/src/styles/components/side-nav/header.scss
@@ -61,10 +61,12 @@
 
 // Apply dark theme to child interactive components
 .hds-side-nav__dropdown, // deprecated classname
-.hds-side-nav .hds-button,
-.hds-side-nav .hds-dropdown-toggle-button,
-.hds-side-nav .hds-dropdown-toggle-icon {
-  @include hds-interactive-dark-theme();
+.hds-side-nav {
+  .hds-button,
+  .hds-dropdown-toggle-button, 
+  .hds-dropdown-toggle-icon {
+    @include hds-interactive-dark-theme();
+  }
 }
 
 // generic "icon-button"
